logs/pyron.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyron'...
Compiling './lib/python3.5/site-packages/pyron/command.py'...
***   File "./lib/python3.5/site-packages/pyron/command.py", line 51
    print 'Package %r added successfully; it has %d requirements' % (
                                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyron/introspect.py'...
***   File "./lib/python3.5/site-packages/pyron/introspect.py", line 29
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyron/readme.py'...
***   File "./lib/python3.5/site-packages/pyron/readme.py", line 13
    README_MATCH = re.compile(ur'\n+(``[A-Za-z_.]+`` *-- *)?(.*)\n[=-]*\n').match
                                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyron/sdist.py'...
***   File "./lib/python3.5/site-packages/pyron/sdist.py", line 68
    tarinfo.mode = 0644
                      ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/pyron/test.py'...
***   File "./lib/python3.5/site-packages/pyron/test.py", line 42
    except PyronError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyron-0.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
